# movie-buddy

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
movie_buddy/: __main__.py  api.py  auth.py  browser.py  cli.py  config.py  matcher.py  models.py  storage.py
specs/001-random-episode/: api-research.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-random-episode/checklists/: requirements.md
specs/001-random-episode/contracts/: api-client.md  cli-commands.md
specs/002-personal-recommendations/: data-model.md  llm-provider-research.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-personal-recommendations/checklists/: requirements.md
specs/002-personal-recommendations/contracts/: cli-commands.md
tests/: test_api.py  test_auth.py  test_browser.py  test_cli.py  test_models.py  test_storage.py
