[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "movie-buddy"
version = "0.2.0"
description = "CLI tool to open a random episode of a series on kino.pub"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.0",
    "cryptography>=42.0",
    "python-dotenv>=1.0",
    "openai>=1.30",
    "libsql-client>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["movie_buddy*"]

[project.scripts]
movie-buddy = "movie_buddy.cli:app"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "ISC",    # flake8-implicit-str-concat
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "PTH",    # flake8-use-pathlib
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PLC",    # pylint convention
    "PLE",    # pylint error
    "PLW",    # pylint warning
    "RUF",    # ruff-specific
    "S",      # flake8-bandit (security)
    "FBT",    # flake8-boolean-trap
    "PERF",   # perflint
    "FURB",   # refurb
]
ignore = [
    "S105",   # possible hardcoded password (false positives on client_secret field names)
    "S106",   # same for function args
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert allowed in tests
    "S311",   # pseudo-random is fine in tests (not crypto)
    "ARG",    # unused fixture args are normal in pytest
    "FBT",    # boolean positional args fine in tests
    "PLC0415", # deferred imports fine in tests
]
"movie_buddy/cli.py" = [
    "FBT",    # boolean options are idiomatic in typer/click
]
"movie_buddy/browser.py" = [
    "S603",   # subprocess calls are intentional (opening Chrome)
    "S607",   # partial path is intentional (open, google-chrome)
]
"movie_buddy/models.py" = [
    "PLC0415", # deferred import to avoid circular dependency with config
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
